--- a/redux-tut/src/App.css
+++ b/redux-tut/src/App.css
@@ -45,16 +45,16 @@
 .btn-wrapper button{
 background-color: rgb(60, 134, 60);
 border: 0px;
-/* padding: 10px; */
+padding: 10px;
+
+width: 60px;
 border-radius: 4px;
 color: #fff;
 box-shadow: #000 0px 1px 5px;
 }
 
-r{
 
-/* margin-top: -10px; */
-}
+
 .img-wrapper img{
   height: 100%;
 }
@@ -68,7 +68,7 @@ r{
 .cart-wrapper{
 height: 100px; width: 500px;
 border: 1px solid #ccc;
-margin-left: 10%;
+/* margin-left: 10%; */
 }
 
 .item {
